--- a/aboutme.html
+++ b/aboutme.html
@@ -39,7 +39,7 @@
 				</h2>
 				  <div class="gr_custom_each_container_">
 					  <div class="gr_custom_book_container_">
-						<a title="An American Marriage" rel="nofollow" href="https://www.goodreads.com/review/show/3423567156?utm_medium=api&amp;utm_source=custom_widget"><img alt="An American Marriage" border="0" src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1491493625l/33590210._SY75_.jpg" /></a>
+						<a title="An American Marriage" rel="nofollow" href="https://www.goodreads.com/review/show/3423567156?utm_medium=api&amp;utm_source=custom_widget"><img alt="An American Marriage" src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1491493625l/33590210._SY75_.jpg" /></a>
 					  </div>
 					  <div class="gr_custom_rating_">
 						<span class=" staticStars notranslate" title="really liked it"><img alt="really liked it" src="https://www.goodreads.com/images/layout/gr_red_star_active.png" /><img alt="" src="https://www.goodreads.com/images/layout/gr_red_star_active.png" /><img alt="" src="https://www.goodreads.com/images/layout/gr_red_star_active.png" /><img alt="" src="https://www.goodreads.com/images/layout/gr_red_star_active.png" /><img alt="" src="https://www.goodreads.com/images/layout/gr_red_star_inactive.png" /></span>
@@ -56,7 +56,7 @@
 				  </div>
 				  <div class="gr_custom_each_container_">
 					  <div class="gr_custom_book_container_">
-						<a title="Nothing to Envy: Ordinary Lives in North Korea" rel="nofollow" href="https://www.goodreads.com/review/show/3372267113?utm_medium=api&amp;utm_source=custom_widget"><img alt="Nothing to Envy: Ordinary Lives in North Korea" border="0" src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1320449375l/6178648._SY75_.jpg" /></a>
+						<a title="Nothing to Envy: Ordinary Lives in North Korea" rel="nofollow" href="https://www.goodreads.com/review/show/3372267113?utm_medium=api&amp;utm_source=custom_widget"><img alt="Nothing to Envy: Ordinary Lives in North Korea" src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1320449375l/6178648._SY75_.jpg" /></a>
 					  </div>
 					  <div class="gr_custom_rating_">
 						<span class=" staticStars notranslate" title="really liked it"><img alt="really liked it" src="https://www.goodreads.com/images/layout/gr_red_star_active.png" /><img alt="" src="https://www.goodreads.com/images/layout/gr_red_star_active.png" /><img alt="" src="https://www.goodreads.com/images/layout/gr_red_star_active.png" /><img alt="" src="https://www.goodreads.com/images/layout/gr_red_star_active.png" /><img alt="" src="https://www.goodreads.com/images/layout/gr_red_star_inactive.png" /></span>
@@ -73,7 +73,7 @@
 				  </div>
 				  <div class="gr_custom_each_container_">
 					  <div class="gr_custom_book_container_">
-						<a title="Animal Farm" rel="nofollow" href="https://www.goodreads.com/review/show/3368013100?utm_medium=api&amp;utm_source=custom_widget"><img alt="Animal Farm" border="0" src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1424037542l/7613._SY75_.jpg" /></a>
+						<a title="Animal Farm" rel="nofollow" href="https://www.goodreads.com/review/show/3368013100?utm_medium=api&amp;utm_source=custom_widget"><img alt="Animal Farm" src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1424037542l/7613._SY75_.jpg" /></a>
 					  </div>
 					  <div class="gr_custom_rating_">
 						<span class=" staticStars notranslate" title="really liked it"><img alt="really liked it" src="https://www.goodreads.com/images/layout/gr_red_star_active.png" /><img alt="" src="https://www.goodreads.com/images/layout/gr_red_star_active.png" /><img alt="" src="https://www.goodreads.com/images/layout/gr_red_star_active.png" /><img alt="" src="https://www.goodreads.com/images/layout/gr_red_star_active.png" /><img alt="" src="https://www.goodreads.com/images/layout/gr_red_star_inactive.png" /></span>
@@ -87,7 +87,7 @@
 				  </div>
 				  <div class="gr_custom_each_container_">
 					  <div class="gr_custom_book_container_">
-						<a title="I, Robot (Robot, #0.1)" rel="nofollow" href="https://www.goodreads.com/review/show/3351325038?utm_medium=api&amp;utm_source=custom_widget"><img alt="I, Robot" border="0" src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1388321463l/41804._SX50_.jpg" /></a>
+						<a title="I, Robot (Robot, #0.1)" rel="nofollow" href="https://www.goodreads.com/review/show/3351325038?utm_medium=api&amp;utm_source=custom_widget"><img alt="I, Robot" src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1388321463l/41804._SX50_.jpg" /></a>
 					  </div>
 					  <div class="gr_custom_rating_">
 						<span class=" staticStars notranslate" title="really liked it"><img alt="really liked it" src="https://www.goodreads.com/images/layout/gr_red_star_active.png" /><img alt="" src="https://www.goodreads.com/images/layout/gr_red_star_active.png" /><img alt="" src="https://www.goodreads.com/images/layout/gr_red_star_active.png" /><img alt="" src="https://www.goodreads.com/images/layout/gr_red_star_active.png" /><img alt="" src="https://www.goodreads.com/images/layout/gr_red_star_inactive.png" /></span>
@@ -101,7 +101,7 @@
 				  </div>
 				  <div class="gr_custom_each_container_">
 					  <div class="gr_custom_book_container_">
-						<a title="Behind Her Eyes" rel="nofollow" href="https://www.goodreads.com/review/show/3349085618?utm_medium=api&amp;utm_source=custom_widget"><img alt="Behind Her Eyes" border="0" src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1485279813l/28965131._SY75_.jpg" /></a>
+						<a title="Behind Her Eyes" rel="nofollow" href="https://www.goodreads.com/review/show/3349085618?utm_medium=api&amp;utm_source=custom_widget"><img alt="Behind Her Eyes" src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1485279813l/28965131._SY75_.jpg" /></a>
 					  </div>
 					  <div class="gr_custom_rating_">
 						<span class=" staticStars notranslate" title="it was ok"><img alt="it was ok" src="https://www.goodreads.com/images/layout/gr_red_star_active.png" /><img alt="" src="https://www.goodreads.com/images/layout/gr_red_star_active.png" /><img alt="" src="https://www.goodreads.com/images/layout/gr_red_star_inactive.png" /><img alt="" src="https://www.goodreads.com/images/layout/gr_red_star_inactive.png" /><img alt="" src="https://www.goodreads.com/images/layout/gr_red_star_inactive.png" /></span>
@@ -114,16 +114,14 @@
 					  </div>
 				  </div>
 			  <br style="clear: both"/>
-			  <center>
 				<a rel="nofollow" href="https://www.goodreads.com/"><img alt="goodreads.com" style="border:0" src="https://www.goodreads.com/images/widget/widget_logo.gif" /></a>
-			  </center>
 			  <noscript>
 				Share <a rel="nofollow" href="https://www.goodreads.com/">book reviews</a> and ratings with Zola , and even join a <a rel="nofollow" href="https://www.goodreads.com/group">book club</a> on Goodreads.
 			  </noscript>
 			  </div>
 
 				  </div>
-				  <script src="https://www.goodreads.com/review/custom_widget/41682749.Zola%20's%20bookshelf:%20read?cover_position=&cover_size=&num_books=5&order=&shelf=&sort=&widget_bg_transparent=" type="text/javascript" charset="utf-8"></script>
+				  <script src="https://www.goodreads.com/review/custom_widget/41682749.Zola%20's%20bookshelf:%20read?cover_position=&cover_size=&num_books=5&order=&shelf=&sort=&widget_bg_transparent=" ></script>
 		</aside>
 		<!--Goodreads Widget End-->
 		
